# trx_s_ros_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  trx_s.rviz
launch/: bringup.launch  display.launch
scripts/: controller_node.py  seed_command.py
urdf/: trx_s.urdf
