<?xml version="1.0"?>
<package>
  <name>trx_s_ros_pkg</name>
  <version>1.0.0</version>
  <description>The trx_s_ros package</description>

  <license>BSD</license>
  <maintainer email="y.shiigi@thk.co.jp">
    Yasuto Shiigi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
